# serializer version: 1
# name: TestGroupsQueryRunner.test_groups_query_runner
  '''
  SELECT groups.index AS index,
         groups.key AS key,
         groups.created_at AS created_at,
         groups.properties AS properties
  FROM
    (SELECT argMax(toTimeZone(groups.created_at, 'UTC'), toTimeZone(groups._timestamp, 'UTC')) AS created_at,
            argMax(groups.group_properties, toTimeZone(groups._timestamp, 'UTC')) AS properties,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  WHERE ifNull(equals(groups.index, 0), 0)
  ORDER BY groups.created_at DESC
  LIMIT 11
  OFFSET 0 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
# name: TestGroupsQueryRunner.test_groups_query_runner.1
  '''
  SELECT groups.index AS index,
         groups.key AS key,
         groups.created_at AS created_at,
         groups.properties AS properties
  FROM
    (SELECT argMax(toTimeZone(groups.created_at, 'UTC'), toTimeZone(groups._timestamp, 'UTC')) AS created_at,
            argMax(groups.group_properties, toTimeZone(groups._timestamp, 'UTC')) AS properties,
            groups.group_type_index AS index,
            groups.group_key AS key
     FROM groups
     WHERE equals(groups.team_id, 99999)
     GROUP BY groups.group_type_index,
              groups.group_key) AS groups
  WHERE ifNull(equals(groups.index, 0), 0)
  ORDER BY groups.created_at DESC
  LIMIT 11
  OFFSET 2 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0
  '''
# ---
